# srooter-scout

./: .gitignore  LICENSE  README.md  pyproject.toml
src/srooter_scout/: cli.py  hardware.py  history.py  ratings_data.py  recommender.py  report.py
tests/: test_cli.py  test_hardware.py  test_history.py  test_ratings_data.py  test_recommender.py  test_report.py
