[project]
name = "srooter-scout"
version = "0.1.0"
description = "Local AI coding audit tool — find inefficiencies, detect hardware, get model recommendations"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
srooter-scout = "srooter_scout.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cov"
